fixed long urls not wrapping

--- a/sass/partials/_global.scss
+++ b/sass/partials/_global.scss
@@ -71,8 +71,10 @@ body {
     @include adjust-font-size-to(ms(1));
 }
 
-@include breakpoint($palm-end) {
-    main {
+main {
+    @include force-wrap();
+
+    @include breakpoint($palm-end) {
         max-width: 32em;
         margin: 0 auto;
     }
